--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
 
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Barista Khaing | Pyin Oo Lwin</title>
+<script src="https://www.google.com/search?q=https://cdn.tailwindcss.com"></script>
+<style>
+@import url('https://www.google.com/search?q=https://fonts.googleapis.com/css2%3Ffamily%3DPlayfair%2BDisplay:wght%40700%26family%3DInter:wght%40300%3B400%3B600%3B700%26display%3Dswap');
+body { font-family: 'Inter', sans-serif; }
+h1, h2, h3, .font-serif { font-family: 'Playfair Display', serif; }
+</style>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/main.jsx"></script>
+</body>
+</html>
